recursion.cons.lessons.recursion.cons.Length.scala.error
length:2: error: illegal start of statement
	[1,2,3]}
        ^